AC_INIT([src/main.c])

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(giFToxic, 0.0.9)
AC_PROG_CC

AC_EXPAND_DIR(DATADIR, "$datadir/giFToxic")
AC_DEFINE_UNQUOTED(DATADIR, "$DATADIR", Directory in which the data files will be installed)

ALL_LINGUAS="es de nl"
AM_GNU_GETTEXT
AC_EXPAND_DIR(LOCALEDIR, "$datadir/locale")
AC_DEFINE_UNQUOTED(LOCALEDIR, "$LOCALEDIR", [Name of gettext locale directory])

AC_EXPAND_DIR(PIXMAPDIR, "$datadir/pixmaps")
AC_DEFINE_UNQUOTED(PIXMAPDIR, "$PIXMAPDIR", Directory in which the pixmaps will be installed)
AC_SUBST(PIXMAPDIR)

PKG_CHECK_MODULES(GIFTOXIC, gtk+-2.0 >= 2.0.3 libgift >= 0.10.0)

AC_PATH_PROG(gdkpixbufcsourcepath, gdk-pixbuf-csource)
if test "_$gdkpixbufcsourcepath" = _; then
	AC_MSG_ERROR("Cannot find gdk-pixbuf-csource: Install GTK+ 2.0\!")
fi

AC_CHECK_HEADERS(stdint.h)

AC_ARG_ENABLE(debug, [  --enable-debug          debug build (default: no)], debug=$enableval, debug=no)
if test "$debug" = yes; then
	CFLAGS=`echo "$CFLAGS -g -Wall" | sed s/-s//`
	AC_DEFINE([GIFTOXIC_DEBUG], [], [Debug enabled])
fi

AC_DEFINE([GTK_DISABLE_DEPRECATED], [], [Disable deprecated GTK])

AC_OUTPUT([
Makefile
src/Makefile
data/Makefile
data/giFToxic.desktop
m4/Makefile
intl/Makefile
po/Makefile.in
giFToxic.spec])

