# $Id: Makefile.am,v 1.4 2003/09/08 05:52:41 jasta Exp $
###############################################################################

Gnutelladatadir = $(datadir)/giFT/Gnutella
Gnutelladata_DATA = \
	gwebcaches \
	hostiles.txt \
	Gnutella.conf.template \
	Gnutella.conf

EXTRA_DIST = \
	$(Gnutelladata_DATA)
